feat: list tasks
